# ImageCapture

./: CMakeLists.txt
src/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  main.cpp
